Assignments/Assignment1/TestChoBanHung/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from c:\Users\ASUS\Desktop\201\PPL\Assignments\Assignment1\TestChoBanHung\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'='", 
                     "'<='", "'>='", "'!='", "'=='", "'<'", "'>'", "'+.'", 
                     "'-.'", "'*.'", "'/.'", "'<=.'", "'>=.'", "'=/='", 
                     "'=.'", "'<.'", "'>.'", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "'.'", "';'", "','", "':'", 
                     "'Function'", "'Begin'", "'Body'", "'End'", "'Parameter'", 
                     "'True'", "'False'", "'If'", "'Then'", "'Else'", "'ElseIf'", 
                     "'Endif'", "'EndDo'", "'EndBody'", "'For'", "'While'", 
                     "'Do'", "'To'", "'EndFor'", "'EndWhile'", "'return'", 
                     "'break'", "'continue'", "'int'", "'string'", "'float'", 
                     "'boolean'", "'Var'", "'of'", "'array'" ]

    symbolicNames = [ "<INVALID>", "INTEGER_LITERAL", "FLOAT_LITERAL", "BOOLEAN_LITERAL", 
                      "STRING_LITERAL", "CMTLINE", "CMTBLOCK", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "NOT", "AND", "OR", "ASSIGN", 
                      "LTE", "GTE", "NEQ", "EQ", "LT", "GT", "FADD", "FSUB", 
                      "FMUL", "FDIV", "FLTE", "FGTE", "FNEQ", "FEQ", "FLT", 
                      "FGT", "WS", "LP", "RP", "LCB", "RCB", "LSB", "RSB", 
                      "DOT", "SEMI", "COMMA", "COLON", "FUNCTION", "BEGIN", 
                      "BODY", "END", "PARAMETER", "TRUE", "FALSE", "IF", 
                      "THEN", "ELSE", "ELSEIF", "ENDIF", "ENDDO", "ENDBODY", 
                      "FOR", "WHILE", "DO", "TO", "ENDFOR", "ENDWHILE", 
                      "RETURN", "BREAK", "CONTINUE", "INTEGER", "STRING", 
                      "FLOAT", "BOOLEAN", "VAR", "OF", "ARRAY", "ID", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_global_decl = 1
    RULE_varlist = 2
    RULE_var = 3
    RULE_para_decl = 4
    RULE_paralist = 5
    RULE_para = 6
    RULE_idsList = 7
    RULE_func_decl = 8
    RULE_stmt = 9
    RULE_blockstmt = 10
    RULE_if_stmt = 11
    RULE_for_stmt = 12
    RULE_while_stmt = 13
    RULE_do_stmt = 14
    RULE_break_stmt = 15
    RULE_assign_stmt = 16
    RULE_continue_stmt = 17
    RULE_call_stmt = 18
    RULE_return_stmt = 19
    RULE_arglist = 20
    RULE_exp_stmt = 21
    RULE_exp0 = 22
    RULE_exp1 = 23
    RULE_exp2 = 24
    RULE_exp3 = 25
    RULE_exp4 = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_exp7 = 29
    RULE_exp8 = 30
    RULE_exp9 = 31
    RULE_operands = 32
    RULE_array = 33
    RULE_number = 34
    RULE_primitive_types = 35
    RULE_array_lhs = 36
    RULE_array_rhs = 37

    ruleNames =  [ "program", "global_decl", "varlist", "var", "para_decl", 
                   "paralist", "para", "idsList", "func_decl", "stmt", "blockstmt", 
                   "if_stmt", "for_stmt", "while_stmt", "do_stmt", "break_stmt", 
                   "assign_stmt", "continue_stmt", "call_stmt", "return_stmt", 
                   "arglist", "exp_stmt", "exp0", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", "operands", 
                   "array", "number", "primitive_types", "array_lhs", "array_rhs" ]

    EOF = Token.EOF
    INTEGER_LITERAL=1
    FLOAT_LITERAL=2
    BOOLEAN_LITERAL=3
    STRING_LITERAL=4
    CMTLINE=5
    CMTBLOCK=6
    ADD=7
    SUB=8
    MUL=9
    DIV=10
    MOD=11
    NOT=12
    AND=13
    OR=14
    ASSIGN=15
    LTE=16
    GTE=17
    NEQ=18
    EQ=19
    LT=20
    GT=21
    FADD=22
    FSUB=23
    FMUL=24
    FDIV=25
    FLTE=26
    FGTE=27
    FNEQ=28
    FEQ=29
    FLT=30
    FGT=31
    WS=32
    LP=33
    RP=34
    LCB=35
    RCB=36
    LSB=37
    RSB=38
    DOT=39
    SEMI=40
    COMMA=41
    COLON=42
    FUNCTION=43
    BEGIN=44
    BODY=45
    END=46
    PARAMETER=47
    TRUE=48
    FALSE=49
    IF=50
    THEN=51
    ELSE=52
    ELSEIF=53
    ENDIF=54
    ENDDO=55
    ENDBODY=56
    FOR=57
    WHILE=58
    DO=59
    TO=60
    ENDFOR=61
    ENDWHILE=62
    RETURN=63
    BREAK=64
    CONTINUE=65
    INTEGER=66
    STRING=67
    FLOAT=68
    BOOLEAN=69
    VAR=70
    OF=71
    ARRAY=72
    ID=73
    UNCLOSE_STRING=74
    ILLEGAL_ESCAPE=75
    ERROR_CHAR=76
    UNTERMINATED_COMMENT=77

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_decl(self):
            return self.getTypedRuleContext(BKITParser.Global_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(BKITParser.Func_declContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.FUNCTION, BKITParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.VAR]:
                    self.state = 76
                    self.global_decl()
                    pass
                elif token in [BKITParser.FUNCTION]:
                    self.state = 77
                    self.func_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [BKITParser.EOF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.match(BKITParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def varlist(self):
            return self.getTypedRuleContext(BKITParser.VarlistContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_global_decl




    def global_decl(self):

        localctx = BKITParser.Global_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_global_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(BKITParser.VAR)
            self.state = 84
            self.match(BKITParser.COLON)
            self.state = 85
            self.varlist()
            self.state = 86
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def varlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarlistContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarlistContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_varlist




    def varlist(self):

        localctx = BKITParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.var()
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 89
                    self.match(BKITParser.COMMA)
                    self.state = 90
                    self.varlist() 
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def INTEGER_LITERAL(self):
            return self.getToken(BKITParser.INTEGER_LITERAL, 0)

        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def operands(self):
            return self.getTypedRuleContext(BKITParser.OperandsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var




    def var(self):

        localctx = BKITParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(BKITParser.ID)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKITParser.LSB:
                    self.state = 97
                    self.match(BKITParser.LSB)
                    self.state = 98
                    self.match(BKITParser.INTEGER_LITERAL)
                    self.state = 99
                    self.match(BKITParser.RSB)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(BKITParser.ID)
                self.state = 103
                self.match(BKITParser.ASSIGN)
                self.state = 104
                self.operands()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def paralist(self):
            return self.getTypedRuleContext(BKITParser.ParalistContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_para_decl




    def para_decl(self):

        localctx = BKITParser.Para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_para_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(BKITParser.VAR)
            self.state = 108
            self.match(BKITParser.COLON)
            self.state = 109
            self.paralist()
            self.state = 110
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para(self):
            return self.getTypedRuleContext(BKITParser.ParaContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def paralist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ParalistContext)
            else:
                return self.getTypedRuleContext(BKITParser.ParalistContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_paralist




    def paralist(self):

        localctx = BKITParser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paralist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.para()
            self.state = 117
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 113
                    self.match(BKITParser.COMMA)
                    self.state = 114
                    self.paralist() 
                self.state = 119
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def INTEGER_LITERAL(self):
            return self.getToken(BKITParser.INTEGER_LITERAL, 0)

        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_para




    def para(self):

        localctx = BKITParser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(BKITParser.ID)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.LSB:
                self.state = 121
                self.match(BKITParser.LSB)
                self.state = 122
                self.match(BKITParser.INTEGER_LITERAL)
                self.state = 123
                self.match(BKITParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdsListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ID)
            else:
                return self.getToken(BKITParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_idsList




    def idsList(self):

        localctx = BKITParser.IdsListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idsList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(BKITParser.ID)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 127
                self.match(BKITParser.COMMA)
                self.state = 128
                self.match(BKITParser.ID)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def idsList(self):
            return self.getTypedRuleContext(BKITParser.IdsListContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(BKITParser.BlockstmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_decl




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(BKITParser.FUNCTION)
            self.state = 135
            self.match(BKITParser.COLON)
            self.state = 136
            self.match(BKITParser.ID)
            self.state = 137
            self.match(BKITParser.PARAMETER)
            self.state = 138
            self.match(BKITParser.COLON)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ID:
                self.state = 139
                self.idsList()


            self.state = 142
            self.match(BKITParser.BODY)
            self.state = 143
            self.match(BKITParser.COLON)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.LP:
                self.state = 144
                self.blockstmt()


            self.state = 147
            self.match(BKITParser.ENDBODY)
            self.state = 148
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(BKITParser.BlockstmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(BKITParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(BKITParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(BKITParser.For_stmtContext,0)


        def do_stmt(self):
            return self.getTypedRuleContext(BKITParser.Do_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(BKITParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(BKITParser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(BKITParser.Return_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(BKITParser.Call_stmtContext,0)


        def exp_stmt(self):
            return self.getTypedRuleContext(BKITParser.Exp_stmtContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(BKITParser.Assign_stmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmt




    def stmt(self):

        localctx = BKITParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.blockstmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.if_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.while_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 154
                self.for_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 155
                self.do_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 156
                self.break_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 157
                self.continue_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 158
                self.return_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 159
                self.call_stmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 160
                self.exp_stmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 161
                self.assign_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def para_decl(self):
            return self.getTypedRuleContext(BKITParser.Para_declContext,0)


        def stmt(self):
            return self.getTypedRuleContext(BKITParser.StmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_blockstmt




    def blockstmt(self):

        localctx = BKITParser.BlockstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_blockstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(BKITParser.LP)
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.VAR]:
                self.state = 165
                self.para_decl()
                pass
            elif token in [BKITParser.INTEGER_LITERAL, BKITParser.FLOAT_LITERAL, BKITParser.BOOLEAN_LITERAL, BKITParser.STRING_LITERAL, BKITParser.SUB, BKITParser.NOT, BKITParser.LP, BKITParser.RP, BKITParser.LCB, BKITParser.IF, BKITParser.FOR, BKITParser.WHILE, BKITParser.DO, BKITParser.RETURN, BKITParser.BREAK, BKITParser.CONTINUE, BKITParser.ID]:
                self.state = 166
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 169
            self.match(BKITParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BKITParser.IF, 0)

        def exp0(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Exp0Context)
            else:
                return self.getTypedRuleContext(BKITParser.Exp0Context,i)


        def THEN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.THEN)
            else:
                return self.getToken(BKITParser.THEN, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.StmtContext,i)


        def ELSEIF(self):
            return self.getToken(BKITParser.ELSEIF, 0)

        def ELSE(self):
            return self.getToken(BKITParser.ELSE, 0)

        def ENDIF(self):
            return self.getToken(BKITParser.ENDIF, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_if_stmt




    def if_stmt(self):

        localctx = BKITParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(BKITParser.IF)
            self.state = 172
            self.exp0()
            self.state = 173
            self.match(BKITParser.THEN)
            self.state = 174
            self.stmt()
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 175
                self.match(BKITParser.ELSEIF)
                self.state = 176
                self.exp0()
                self.state = 177
                self.match(BKITParser.THEN)
                self.state = 178
                self.stmt()


            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 182
                self.match(BKITParser.ELSE)
                self.state = 183
